--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -305,7 +305,7 @@ body {
     .button--black {
       padding: 12px 0 14px;
       width: 230px;
-      margin: 0 auto;
+      margin: 30px auto;
       font-weight: 600;
       font-size: 18px;
     }
